# voxels

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CubeSystem.hpp  LICENSE  README.md  TimeWindows.c  TimeWindows.h  build o3 -static -pedantic.bat  build o3 -static ruta.bat  build o3 -static.bat  build.bat  main.cpp  wnp o3 -static -pedantic.bat  wnp o3 -static ruta.bat  wnp o3 -static.bat  wnp.bat  wnp.cpp
.vscode.defaults/: c_cpp_properties.json  settings.json  tasks.json
src/: CMakeLists.txt  CubeBox.cpp  CubeBox.h  CubeSystem.hpp  Game.cpp  Game.h  Time.cpp  Time.h  cube.cpp  cube.h  main.cpp  utils.h
src/engine/: Engine.cpp  Engine.h
src/graphics/: gl_utils.cpp  gl_utils.h  graphic_functions.cpp  graphic_functions.h
